Anpassung Klasse HashService auf Base64